# telegram_to_sms

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
core/: __init__.py  choices.py  classes.py  scheduling.py  settings.py  smsc_api.py
